--- a/src/sdrfly/main.ipynb
+++ b/src/sdrfly/main.ipynb
@@ -324,12 +324,12 @@
     "import logging\n",
     "import faulthandler\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
-    "from bluetooth_demod.sdr.sdr_simulated import SimulatedBluetoothSDR\n",
-    "from bluetooth_demod.sdr.sdr_hackrf import HackRFSdr\n",
-    "from bluetooth_demod.channelizers.channelizer_fft import ChannelizerFFT\n",
-    "from bluetooth_demod.channelizers.channelizer_numba import ChannelizerNumba\n",
-    "from bluetooth_demod.demodulators.demodulator_numba import GFSKDemodNumba\n",
-    "from bluetooth_demod.utils import detect_peaks, extract_lap_and_access_code, probe_devices\n",
+    "from sdrfly.sdr.sdr_simulated import SimulatedBluetoothSDR\n",
+    "from sdrfly.sdr.sdr_hackrf import HackRFSdr\n",
+    "from sdrfly.channelizers.channelizer_fft import ChannelizerFFT\n",
+    "from sdrfly.channelizers.channelizer_numba import ChannelizerNumba\n",
+    "from sdrfly.demodulators.demodulator_numba import GFSKDemodNumba\n",
+    "from sdrfly.utils import detect_peaks, extract_lap_and_access_code, probe_devices\n",
     "\n",
     "# Enable faulthandler\n",
     "faulthandler.enable()\n",
@@ -344,7 +344,7 @@
     "numba_logger.setLevel(logging.WARNING)\n",
     "\n",
     "# Load configuration from JSON file\n",
-    "config_path = '/home/dev/workspace/bluetooth-demod/src/bluetooth_demod/config.json'\n",
+    "config_path = '/home/dev/workspace/bluetooth-demod/src/sdrfly/config.json'\n",
     "with open(config_path, 'r') as f:\n",
     "    config = json.load(f)\n",
     "\n",
