--- a/src/sdrfly/main.ipynb
+++ b/src/sdrfly/main.ipynb
@@ -447,7 +447,7 @@
     "\n",
     "# Run the main function for testing\n",
     "if __name__ == '__main__':\n",
-    "    main()\n"
+    "    main()"
    ]
   }
  ],
@@ -467,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
